feat(ui/sidebar): add user search by keywords in sidebar (#710)
